kubernetes/platform/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trading-dashboard-service
  namespace: platform
spec:
  selector:
    app: trading-dashboard

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
