kubernetes/platform/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trading-dashboard-ingress
  namespace: platform
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong

  rules:
    - http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: trading-dashboard-service
                port:
                  number: 80
